--- a/charts/matrix-slack/templates/deployment.yaml
+++ b/charts/matrix-slack/templates/deployment.yaml
@@ -30,11 +30,11 @@ spec:
       initContainers:
         - name: copy-config
           image: busybox
-          command: [ '/bin/sh', '-c', 'ls / && mkdir -p /data && cp /config/config.yaml /data/config.yaml' ]
+          command: [ '/bin/sh', '-c', 'ls / && cp /config/config.yaml /data/config.yaml' ]
           volumeMounts:
             - mountPath: /config
               name: config
-            - mountPath: /
+            - mountPath: /data
               name: data
       containers:
         - name: {{ .Chart.Name }}
