Update cpu/memory resources, add NFS storage, cleanup.

--- a/config/yml/helm_values/loki-values.yml
+++ b/config/yml/helm_values/loki-values.yml
@@ -42,10 +42,12 @@ write:
   resources:
     requests:
       memory: 256Mi
-      cpu: 250m
+      cpu: 150m
     limits:
       memory: 256Mi
 monitoring:
+  rules:
+    alerting: false
   selfMonitoring:
     enabled: true
     grafanaAgent:
