--- a/config/yml/postgres-operator/matrix-postgres-instances.yml
+++ b/config/yml/postgres-operator/matrix-postgres-instances.yml
@@ -1,4 +1,8 @@
 - name: matrix-postgresql-0
+  resources:
+    requests:
+      cpu: 100m
+      memory: 500Mi
   dataVolumeClaimSpec:
     accessModes:
       - "ReadWriteOnce"
