--- a/config/yml/helm_values/core-values/ixo-matrix-state-bot.yml
+++ b/config/yml/helm_values/core-values/ixo-matrix-state-bot.yml
@@ -1,4 +1,3 @@
-name: ${app_name}
 image:
   pullPolicy: Always
 ingress:
@@ -9,22 +8,23 @@ ingress:
   tls:
     - hosts:
         - ${host}
-      secretName: ${app_name}-tls
+      secretName: ixo-matrix-state-bot-tls
   hosts:
     - host: ${host}
       paths:
-        - path: ${ingressPath}
-          pathType: Exact
+        - path: /
+          pathType: Prefix
 service:
-  port: ${port}
+  port: 8080
 env:
-  ${indent(2, join("\n", [for v in envVars : "- name: \"${v.name}\"\n  value: \"${v.value}\""]))}
+  - name: "PORT"
+    value: "8080"
 resources:
   requests:
-    memory: ${memoryRequest}
+    memory: 100Mi
     cpu: "100m"
   limits:
-    memory: ${memoryLimit}
+    memory: 200Mi
 autoscaling:
   enabled: true
   minReplicas: 1
