Added carbon, ecs, umuzi claims credentials

--- a/config/yml/helm_values/core-values/claims_credentials_prospect.yml
+++ b/config/yml/helm_values/core-values/claims_credentials_prospect.yml
@@ -1,4 +1,4 @@
-name: credentials-prospect
+name: claims-credentials-prospect
 image:
   pullPolicy: Always
 ingress:
@@ -9,7 +9,7 @@ ingress:
   tls:
     - hosts:
         - ${host}
-      secretName: credentials-prospect-tls
+      secretName: claims-credentials-prospect-tls
   hosts:
     - host: ${host}
       paths:
@@ -21,7 +21,7 @@ env:
   - name: "PORT"
     value: "3000"
   - name: "Authorization"
-    value: "<path:${vault_mount}/data/credentials-prospect#AUTHORIZATION>"
+    value: "<path:${vault_mount}/data/claims-credentials-prospect#AUTHORIZATION>"
   - name: "ENABLE_CLAIMS"
     value: "true"
   - name: "BLOCKSYNC_GRAPHQL"
@@ -31,13 +31,13 @@ env:
   - name: "RPC_URL"
     value: "https://devnet.ixo.earth/rpc/"
   - name: "SECP_MNEMONIC"
-    value: "<path:${vault_mount}/data/credentials-prospect#SECP_MNEMONIC>"
+    value: "<path:${vault_mount}/data/claims-credentials-prospect#SECP_MNEMONIC>"
   - name: "ENABLE_CREDENTIALS"
     value: "true"
   - name: "ISSUER_DID"
-    value: "<path:${vault_mount}/data/credentials-prospect#ISSUER_DID>"
+    value: "<path:${vault_mount}/data/claims-credentials-prospect#ISSUER_DID>"
   - name: "CREDENTIALS_MNEMONIC"
-    value: "<path:${vault_mount}/data/credentials-prospect#CREDENTIALS_MNEMONIC>"
+    value: "<path:${vault_mount}/data/claims-credentials-prospect#CREDENTIALS_MNEMONIC>"
   - name: "NETWORK"
     value: ${environment}
   - name: "REMOTE_CONTEXTS"
