Update credentials configs & domains

--- a/config/yml/helm_values/core-values/claims_credentials_carbon.yml
+++ b/config/yml/helm_values/core-values/claims_credentials_carbon.yml
@@ -9,7 +9,7 @@ ingress:
   tls:
     - hosts:
         - ${host}
-      secretName: carbon-tls
+      secretName: claims-credentials-carbon-tls
   hosts:
     - host: ${host}
       paths:
