--- a/config/yml/helm_values/core-values/claims_credentials_ecs.yml
+++ b/config/yml/helm_values/core-values/claims_credentials_ecs.yml
@@ -9,7 +9,7 @@ ingress:
   tls:
     - hosts:
         - ${host}
-      secretName: ecs-tls
+      secretName: claims-credentials-ecs-tls
   hosts:
     - host: ${host}
       paths:
@@ -51,7 +51,7 @@ resources:
     memory: 200Mi
     cpu: "100m"
   limits:
-    memory: 300Mi
+    memory: 250Mi
 autoscaling:
   enabled: true
   minReplicas: 1
