Changelog: - Fixes ArgoCD Vault Plugin - Update configs - Add faucet, did_resolver, feegrant_nest

--- a/config/yml/helm_values/core-values/claims_credentials_prospect.yml
+++ b/config/yml/helm_values/core-values/claims_credentials_prospect.yml
@@ -20,14 +20,14 @@ service:
 env:
   - name: "PORT"
     value: "3000"
-  - name: "Authorization"
+  - name: "AUTHORIZATION"
     value: "<path:${vault_mount}/data/claims-credentials-prospect#AUTHORIZATION>"
   - name: "ENABLE_CLAIMS"
     value: "true"
   - name: "BLOCKSYNC_GRAPHQL"
-    value: "http://ixo-blocksync.core.svc.cluster.local"
+    value: "http://ixo-blocksync.core.svc.cluster.local:8082"
   - name: "CELLNODE"
-    value: "http://ixo-cellnode.core.svc.cluster.local"
+    value: "http://ixo-cellnode.core.svc.cluster.local:5000"
   - name: "RPC_URL"
     value: "https://devnet.ixo.earth/rpc/"
   - name: "SECP_MNEMONIC"
