--- a/config/yml/postgres-operator/matrix-postgres-instances.yml
+++ b/config/yml/postgres-operator/matrix-postgres-instances.yml
@@ -3,6 +3,8 @@
     requests:
       cpu: 100m
       memory: 500Mi
+    limits:
+      memory: 1Gi
   dataVolumeClaimSpec:
     accessModes:
       - "ReadWriteOnce"
