Modular config, updated for testnet

--- a/config/yml/helm_values/core-values/claims_credentials_umuzi.yml
+++ b/config/yml/helm_values/core-values/claims_credentials_umuzi.yml
@@ -29,7 +29,7 @@ env:
   - name: "CELLNODE"
     value: "http://ixo-cellnode.core.svc.cluster.local:5000"
   - name: "RPC_URL"
-    value: "https://devnet.ixo.earth/rpc/"
+    value: "https://${environment}.ixo.earth/rpc/"
   - name: "SECP_MNEMONIC"
     value: "<path:${vault_mount}/data/claims-credentials-umuzi#SECP_MNEMONIC>"
   - name: "ENABLE_CREDENTIALS"
