--- a/config/yml/helm_values/prometheus.yml
+++ b/config/yml/helm_values/prometheus.yml
@@ -9,40 +9,40 @@ alertmanager:
         memory: 400Mi
 defaultRules:
   rules:
-    alertmanager: true
-    etcd: true
-    configReloaders: true
-    general: true
+    alertmanager: false
+    etcd: false
+    configReloaders: false
+    general: false
     k8sContainerCpuUsageSecondsTotal: true
     k8sContainerMemoryCache: true
     k8sContainerMemoryRss: true
     k8sContainerMemorySwap: true
     k8sContainerResource: true
     k8sContainerMemoryWorkingSetBytes: true
-    k8sPodOwner: true
-    kubeApiserverAvailability: true
+    k8sPodOwner: false
+    kubeApiserverAvailability: false
     kubeApiserverBurnrate: false
     kubeApiserverHistogram: false
     kubeApiserverSlos: false
-    kubeControllerManager: true
-    kubelet: true
+    kubeControllerManager: false
+    kubelet: false
     kubeProxy: false
-    kubePrometheusGeneral: true
+    kubePrometheusGeneral: false
     kubePrometheusNodeRecording: false
-    kubernetesApps: true
-    kubernetesResources: true
-    kubernetesStorage: true
-    kubernetesSystem: true
+    kubernetesApps: false
+    kubernetesResources: false
+    kubernetesStorage: false
+    kubernetesSystem: false
     kubeSchedulerAlerting: false
     kubeSchedulerRecording: false
-    kubeStateMetrics: true
-    network: true
+    kubeStateMetrics: false
+    network: false
     node: true
-    nodeExporterAlerting: true
+    nodeExporterAlerting: false
     nodeExporterRecording: false
-    prometheus: true
+    prometheus: false
     prometheusOperator: false
-    windows: true
+    windows: false
 prometheus:
   prometheusSpec:
     replicas: 1
