--- a/config/yml/helm_values/core-values/ixo-blocksync.yml
+++ b/config/yml/helm_values/core-values/ixo-blocksync.yml
@@ -22,13 +22,13 @@ env:
   - name: "NODE_ENV"
     value: "production"
   - name: "RPC"
-    value: "https://devnet.ixo.earth/rpc/"
+    value: "https://${environment}.ixo.earth/rpc/"
   - name: "MIGRATE_DB_PROGRAMATICALLY"
     value: "1"
   - name: "DATABASE_USE_SSL"
     value: "1"
   - name: "IPFS_SERVICE_MAPPING"
-    value: "https://devnet-blocksync-graphql.ixo.earth/api/ipfs/"
+    value: "https://${environment}-blocksync-graphql.ixo.earth/api/ipfs/"
   - name: "DATABASE_URL_CORE"
     value: "postgresql://${pgUsername_core}:${pgPassword_core}@${pgCluster}-primary.${pgNamespace}.svc.cluster.local/${pgUsername_core}"
   - name: "DATABASE_URL"
