--- a/config/yml/postgres-operator/ixo-postgres-instances.yml
+++ b/config/yml/postgres-operator/ixo-postgres-instances.yml
@@ -3,7 +3,7 @@
   resources:
     requests:
       cpu: 500m
-      memory: 1Gi
+      memory: 512Mi
     limits:
       memory: 2Gi
   dataVolumeClaimSpec:
