Cloudflare external-dns, mainnet, modularity

--- a/config/yml/helm_values/core-values/claims_credentials_ecs.yml
+++ b/config/yml/helm_values/core-values/claims_credentials_ecs.yml
@@ -29,7 +29,7 @@ env:
   - name: "CELLNODE"
     value: "http://ixo-cellnode.core.svc.cluster.local:5000"
   - name: "RPC_URL"
-    value: "https://${environment}.ixo.earth/rpc/"
+    value: "${rpc_url}"
   - name: "SECP_MNEMONIC"
     value: "<path:${vault_mount}/data/claims-credentials-ecs#SECP_MNEMONIC>"
   - name: "ENABLE_CREDENTIALS"
