--- a/config/yml/helm_values/core-values/ixo_feegrant_nest.yml
+++ b/config/yml/helm_values/core-values/ixo_feegrant_nest.yml
@@ -20,7 +20,7 @@ env:
   - name: "NODE_ENV"
     value: "production"
   - name: "RPC_URL"
-    value: "https://${environment}.ixo.earth/rpc/"
+    value: "${rpc_url}"
   - name: "PORT"
     value: "3000"
   - name: "AUTHORIZATION"
