Changelog: - Blocksync Migrations - IXO Nginx Redirects - IXO Deeplink Server - IXO KYC Server - Matrix config - Minor Configuration Changes

--- a/config/yml/helm_values/core-values/claims_credentials_carbon.yml
+++ b/config/yml/helm_values/core-values/claims_credentials_carbon.yml
@@ -27,7 +27,7 @@ env:
   - name: "BLOCKSYNC_GRAPHQL"
     value: "http://ixo-blocksync.core.svc.cluster.local:8082"
   - name: "CELLNODE"
-    value: "http://ixo-cellnode.core.svc.cluster.local:5000"
+    value: "${cellnode}"
   - name: "RPC_URL"
     value: "${rpc_url}"
   - name: "SECP_MNEMONIC"
