--- a/config/yml/helm_values/core-values/claims_credentials_claimformprotocol.yml
+++ b/config/yml/helm_values/core-values/claims_credentials_claimformprotocol.yml
@@ -1,4 +1,4 @@
-name: claims-credentials-ecs
+name: claims-credentials-claimformprotocol
 image:
   pullPolicy: Always
 ingress:
@@ -9,7 +9,7 @@ ingress:
   tls:
     - hosts:
         - ${host}
-      secretName: claims-credentials-ecs-tls
+      secretName: claims-credentials-claimformprotocol-tls
   hosts:
     - host: ${host}
       paths:
@@ -21,9 +21,9 @@ env:
   - name: "PORT"
     value: "3000"
   - name: "AUTHORIZATION"
-    value: "<path:${vault_mount}/data/claims-credentials-ecs#AUTHORIZATION>"
+    value: "<path:${vault_mount}/data/claims-credentials-claimformprotocol#AUTHORIZATION>"
   - name: "ENABLE_CLAIMS"
-    value: "true"
+    value: "false"
   - name: "BLOCKSYNC_GRAPHQL"
     value: "http://ixo-blocksync.core.svc.cluster.local:8082"
   - name: "CELLNODE"
@@ -31,27 +31,31 @@ env:
   - name: "RPC_URL"
     value: "${rpc_url}"
   - name: "SECP_MNEMONIC"
-    value: "<path:${vault_mount}/data/claims-credentials-ecs#SECP_MNEMONIC>"
+    value: "<path:${vault_mount}/data/claims-credentials-claimformprotocol#SECP_MNEMONIC>"
   - name: "ENABLE_CREDENTIALS"
     value: "true"
   - name: "ISSUER_DID"
-    value: "<path:${vault_mount}/data/claims-credentials-ecs#ISSUER_DID>"
+    value: "<path:${vault_mount}/data/claims-credentials-claimformprotocol#ISSUER_DID>"
   - name: "CREDENTIALS_MNEMONIC"
-    value: "<path:${vault_mount}/data/claims-credentials-ecs#CREDENTIALS_MNEMONIC>"
+    value: "<path:${vault_mount}/data/claims-credentials-claimformprotocol#CREDENTIALS_MNEMONIC>"
   - name: "NETWORK"
     value: ${environment}
   - name: "REMOTE_CONTEXTS"
-    value: "<path:${vault_mount}/data/claims-credentials-ecs#REMOTE_CONTEXTS>"
+    value: "[\"https://w3id.org/ixo/context/v1\"]"
   - name: "ENABLE_TOKENS"
     value: "false"
   - name: "ENABLE_PROOFS"
-    value: "false"
+    value: "true"
+  - name: "PROOFS_MNEMONIC"
+    value: "<path:${vault_mount}/data/claims-credentials-claimformprotocol#PROOFS_MNEMONIC>"
+  - name: "PROOFS_CONTROLLER"
+    value: "<path:${vault_mount}/data/claims-credentials-claimformprotocol#PROOFS_CONTROLLER>"
 resources:
   requests:
     memory: 200Mi
     cpu: "100m"
   limits:
-    memory: 250Mi
+    memory: 300Mi
 autoscaling:
   enabled: true
   minReplicas: 1
