--- a/modules/postgres-operator/crds/cluster.yml
+++ b/modules/postgres-operator/crds/cluster.yml
@@ -14,6 +14,12 @@ spec:
     pgmonitor:
       exporter:
         image: ${pgmonitoring_image}:${pgmonitoring_image_tag}
+        configuration:
+          - configMap:
+              name: promtail-config
+              optional: true
+          - configMap:
+              name: ${pg_cluster_name}-exporter-queries-config
   users:
     ${indent(4, pg_users)}
   instances:
@@ -37,6 +43,13 @@ spec:
     name: ${pg_cluster_name}-init-sql
   patroni:
     dynamicConfiguration:
+      postgresql:
+        parameters:
+          log_checkpoints: 'on'
+          log_statement: 'mod'
+          log_line_prefix: '%t [%p]: host=%h user=%u,db=%d '
+          log_lock_waits: 'on'
+          logging_collector: 'on'
       bootstrap:
         initdb:
           - locale: C
