Changelog: - Added ixo-stake-reward-claimer - Added ixo-coin-server - Added ixo-faq-assistant - Updated nginx CORS for matrix - Updated ixo redirects - Update nfs (todo remove NFS) - Update blackbox probes - Update external dns cloudflare config

--- a/config/yml/helm_values/external-dns-values-cloudflare.yml
+++ b/config/yml/helm_values/external-dns-values-cloudflare.yml
@@ -1,7 +1,11 @@
 provider:
   name: cloudflare
+namespaced: false
 rbac:
-  create: false
+  create: true
+sources:
+  - ingress
+  - service
 env:
   - name: CF_API_TOKEN
     value: ${CF_API_TOKEN}
