--- a/config/yml/helm_values/nginx-ingress-controller-values.yml
+++ b/config/yml/helm_values/nginx-ingress-controller-values.yml
@@ -4,6 +4,11 @@ controller:
     proxy-body-size: "50m"
     server-snippet: |
       keepalive_timeout 4s 4s;
+      
+      if ($request_uri ~* "^/.well-known") {
+        # Allow .well-known paths to bypass redirection
+        break;
+      }
       if ($host = "blockscantest.devnet.ixo.earth") {
           rewrite ^/$ https://explorer.ixo.earth/devnet-ixo redirect;
           rewrite ^/ixo$ https://explorer.ixo.earth/devnet-ixo redirect;
@@ -39,6 +44,15 @@ controller:
           rewrite ^/ixo/proposals/(.*)$ https://explorer.ixo.earth/testnet-ixo/gov/$1 redirect;
           rewrite ^/ixo/accounts/(.*)$ https://explorer.ixo.earth/testnet-ixo/account/$1 redirect;
           rewrite ^/(.*)$ https://explorer.ixo.earth/testnet-ixo redirect;
+      }
+      if ($host = "blockscan.ixo.world") {
+          rewrite ^/$ https://explorer.ixo.earth/ixo redirect;
+          rewrite ^/ixo$ https://explorer.ixo.earth/ixo redirect;
+          rewrite ^/ixo/transactions/(.*)$ https://explorer.ixo.earth/ixo/tx/$1 redirect;
+          rewrite ^/ixo/blocks/(.*)$ https://explorer.ixo.earth/ixo/block/$1 redirect;
+          rewrite ^/ixo/proposals/(.*)$ https://explorer.ixo.earth/ixo/gov/$1 redirect;
+          rewrite ^/ixo/accounts/(.*)$ https://explorer.ixo.earth/ixo/account/$1 redirect;
+          rewrite ^/(.*)$ https://explorer.ixo.earth/ixo redirect;
       }
   addHeaders:
     Host: "$host"
