--- a/config/yml/helm_values/matrix-values.yml
+++ b/config/yml/helm_values/matrix-values.yml
@@ -126,6 +126,12 @@ ingress:
   ##
   annotations:
     nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/enable-cors: "true"
+    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
+    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
+    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
+    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization,Content-Type"
+    nginx.ingress.kubernetes.io/cors-max-age: "3600"
     #  # Sync proxy-body-size with Synapse's max_upload_size which is 10M by default
     nginx.ingress.kubernetes.io/proxy-body-size: 10m
     kubernetes.io/ingress.class: nginx
