--- a/config/yml/helm_values/nfs-values.yml
+++ b/config/yml/helm_values/nfs-values.yml
@@ -5,14 +5,16 @@ persistence:
   size: 200Gi
 resources:
    limits:
-     memory: 256Mi
+     memory: 512Mi
    requests:
-     cpu: 100m
-     memory: 128Mi
+     cpu: 250m
+     memory: 256Mi
 storageClass:
   mountOptions:
     - tcp
     - vers=4.1
+extraArgs:
+  device-based-fsids: false
 affinity:
   podAntiAffinity:  # Spread the pods across nodes for high availability
     requiredDuringSchedulingIgnoredDuringExecution:
