Changelog: - Added auto_approve_offset - Added iot_data - Added ixo_ussd - Added ixo_whizz - Update probes - Update versions

--- a/config/yml/helm_values/core-values/ixo_deeplink_server.yml
+++ b/config/yml/helm_values/core-values/ixo_deeplink_server.yml
@@ -24,15 +24,15 @@ env:
   - name: "DATABASE_URL"
     value: "postgresql://${pgUsername}:${pgPassword}@${pgCluster}-primary.${pgNamespace}.svc.cluster.local/${pgUsername}"
   - name: "BASE_URL"
-    value: "https://x.ixo.earth"
+    value: "<path:${vault_mount}/data/ixo-deeplink-server#BASE_URL>"
   - name: "REDIRECT_URL"
-    value: "https://mobile.ixo.world"
+    value: "<path:${vault_mount}/data/ixo-deeplink-server#REDIRECT_URL>"
   - name: "ANDROID_REDIRECT_URL"
-    value: "https://mobile.ixo.world/android"
+    value: "<path:${vault_mount}/data/ixo-deeplink-server#ANDROID_REDIRECT_URL>"
   - name: "IOS_REDIRECT_URL"
-    value: "https://mobile.ixo.world/ios"
+    value: "<path:${vault_mount}/data/ixo-deeplink-server#IOS_REDIRECT_URL>"
   - name: "FALLBACK_URL"
-    value: "https://mobile.ixo.world"
+    value: "<path:${vault_mount}/data/ixo-deeplink-server#FALLBACK_URL>"
   - name: "MIGRATE_DB_PROGRAMATICALLY"
     value: "1"
   - name: "DATABASE_USE_SSL"
