--- a/config/yml/helm_values/matrix-values.yml
+++ b/config/yml/helm_values/matrix-values.yml
@@ -9,7 +9,60 @@ config:
   enableRegistration: true
   macaroonSecretKey: <path:${kv_mount}/data/${app_name}#MACAROON_SECRET_KEY>
 
+# https://matrix-org.github.io/synapse/latest/usage/configuration/config_documentation.html
 extraConfig:
+  rc_message:
+    per_second: 3
+    burst_count: 40
+  rc_registration:
+    per_second: 1
+    burst_count: 4
+  rc_registration_token_validity:
+    per_second: 1
+    burst_count: 8
+  rc_login:
+    address:
+      per_second: 1
+      burst_count: 10
+    account:
+      per_second: 1
+      burst_count: 10
+    failed_attempts:
+      per_second: 1
+      burst_count: 10
+  rc_admin_redaction:
+    per_second: 1
+    burst_count: 50
+  rc_joins:
+    local:
+      per_second: 2
+      burst_count: 40
+    remote:
+      per_second: 0.5
+      burst_count: 20
+  rc_joins_per_room:
+    per_second: 10
+    burst_count: 50
+  rc_invites:
+    per_room:
+      per_second: 5
+      burst_count: 50
+    per_user:
+      per_second: 5
+      burst_count: 50
+    per_issuer:
+      per_second: 5
+      burst_count: 50
+  rc_media_create:
+    per_second: 10
+    burst_count: 50
+  rc_federation:
+    window_size: 750
+    sleep_limit: 15
+    sleep_delay: 400
+    reject_limit: 40
+    concurrent: 5
+  federation_rr_transactions_per_room_per_second: 40
   dynamic_thumbnails: true
   registration_requires_token: true
   app_service_config_files:
