--- a/config/yml/helm_values/matrix-values.yml
+++ b/config/yml/helm_values/matrix-values.yml
@@ -233,7 +233,7 @@ synapse:
     - 'nohup sh -c "while true; do cd /synapse && zip -r data.zip data && gsutil cp data.zip ${gcs_bucket_url}/matrix/$(date +\%Y\%m\%d)/ && rm -f data.zip; sleep 86400; done" &' # Every 24 hours.
   resources:
     limits:
-      memory: 500Mi
+      memory: 1Gi
     requests:
       cpu: 50m
       memory: 150Mi
